fix daily flow plotting

--- a/Effective Discharge App.ipynb
+++ b/Effective Discharge App.ipynb
@@ -57,7 +57,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7a5480e57dc44ac8e9f9ef063e9c98e",
+       "model_id": "0ee26f1b661d4e33a0244a44bd4a1065",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,7 +71,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f179243bd87d4d9db9316a77a1b1e86a",
+       "model_id": "61b5c15a498747c7b29cb652d3204a27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,150 +110,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>agency_cd</th>\n",
-       "      <th>site_no</th>\n",
-       "      <th>station_nm</th>\n",
-       "      <th>site_tp_cd</th>\n",
-       "      <th>dec_lat_va</th>\n",
-       "      <th>dec_long_va</th>\n",
-       "      <th>coord_acy_cd</th>\n",
-       "      <th>dec_coord_datum_cd</th>\n",
-       "      <th>alt_va</th>\n",
-       "      <th>alt_acy_va</th>\n",
-       "      <th>alt_datum_cd</th>\n",
-       "      <th>huc_cd</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>USGS</td>\n",
-       "      <td>2489500</td>\n",
-       "      <td>Pearl River near Bogalusa, LA</td>\n",
-       "      <td>ST</td>\n",
-       "      <td>30.793243</td>\n",
-       "      <td>-89.820907</td>\n",
-       "      <td>U</td>\n",
-       "      <td>NAD83</td>\n",
-       "      <td>54.64</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>NAVD88</td>\n",
-       "      <td>3180004.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>USGS</td>\n",
-       "      <td>2490193</td>\n",
-       "      <td>Pearl River at Pools Bluff near Bogalusa, LA</td>\n",
-       "      <td>ST</td>\n",
-       "      <td>30.705833</td>\n",
-       "      <td>-89.846389</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NAD83</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>NAVD88</td>\n",
-       "      <td>3180004.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>USGS</td>\n",
-       "      <td>2490200</td>\n",
-       "      <td>Pearl River Navigation Canal Lock and Dam No. 3</td>\n",
-       "      <td>ST</td>\n",
-       "      <td>30.638056</td>\n",
-       "      <td>-89.868056</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NAD83</td>\n",
-       "      <td>33.98</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>NAVD88</td>\n",
-       "      <td>3180004.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>USGS</td>\n",
-       "      <td>2491500</td>\n",
-       "      <td>Bogue Chitto River at Franklinton, LA</td>\n",
-       "      <td>ST</td>\n",
-       "      <td>30.842962</td>\n",
-       "      <td>-90.162030</td>\n",
-       "      <td>U</td>\n",
-       "      <td>NAD83</td>\n",
-       "      <td>123.81</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>NGVD29</td>\n",
-       "      <td>3180005.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>USGS</td>\n",
-       "      <td>2492000</td>\n",
-       "      <td>Bogue Chitto River near Bush, LA</td>\n",
-       "      <td>ST</td>\n",
-       "      <td>30.629356</td>\n",
-       "      <td>-89.897296</td>\n",
-       "      <td>U</td>\n",
-       "      <td>NAD83</td>\n",
-       "      <td>43.31</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>NAVD88</td>\n",
-       "      <td>3180005.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  agency_cd  site_no                                       station_nm  \\\n",
-       "0      USGS  2489500                    Pearl River near Bogalusa, LA   \n",
-       "1      USGS  2490193     Pearl River at Pools Bluff near Bogalusa, LA   \n",
-       "2      USGS  2490200  Pearl River Navigation Canal Lock and Dam No. 3   \n",
-       "3      USGS  2491500            Bogue Chitto River at Franklinton, LA   \n",
-       "4      USGS  2492000                 Bogue Chitto River near Bush, LA   \n",
-       "\n",
-       "  site_tp_cd  dec_lat_va  dec_long_va coord_acy_cd dec_coord_datum_cd  alt_va  \\\n",
-       "0         ST   30.793243   -89.820907            U              NAD83   54.64   \n",
-       "1         ST   30.705833   -89.846389            5              NAD83    0.32   \n",
-       "2         ST   30.638056   -89.868056            5              NAD83   33.98   \n",
-       "3         ST   30.842962   -90.162030            U              NAD83  123.81   \n",
-       "4         ST   30.629356   -89.897296            U              NAD83   43.31   \n",
-       "\n",
-       "   alt_acy_va alt_datum_cd     huc_cd  \n",
-       "0        1.00       NAVD88  3180004.0  \n",
-       "1        0.16       NAVD88  3180004.0  \n",
-       "2        0.20       NAVD88  3180004.0  \n",
-       "3        0.01       NGVD29  3180005.0  \n",
-       "4        0.22       NAVD88  3180005.0  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests,pandas,io\n",
     "state_data=[]\n",
@@ -270,7 +127,7 @@
     "            break\n",
     "    state_data.append(pandas.read_table(io.BytesIO(resp._content),comment='#',skiprows=[ncomments+1]))\n",
     "f = pandas.concat(state_data, axis=0)\n",
-    "f.head()"
+    "#f.head()"
    ]
   },
   {
@@ -375,13 +232,17 @@
     "            #    print(col) \n",
     "            f.DATETIME = pandas.to_datetime(f.DATETIME)\n",
     "            #print(f.head())\n",
-    "            if not has_daily_file and 'DAILYFLOW' in f.columns:\n",
-    "                daily_flow_plot.plot(f.DATETIME, f.DAILYFLOW)\n",
-    "                daily_flow_plot.set_ylabel('Discharge [cfs]')\n",
-    "                daily_flow_plot.set_xlabel('Date')\n",
-    "                daily_flow_plot.set_title('Daily Flow (from discrete file)')\n",
-    "                daily_flow_plot.grid()\n",
-    "                daily_flow = f.DAILYFLOW\n",
+    "            if 'DAILYFLOW' in f.columns:\n",
+    "                if not has_daily_file:\n",
+    "                    daily_flow_plot.plot(f.DATETIME, f.DAILYFLOW)\n",
+    "                    daily_flow_plot.set_ylabel('Discharge [cfs]')\n",
+    "                    daily_flow_plot.set_xlabel('Date')\n",
+    "                    daily_flow_plot.set_title('Daily Flow (from discrete file)')\n",
+    "                    daily_flow_plot.grid()\n",
+    "                    daily_flow = f.DAILYFLOW\n",
+    "                else:\n",
+    "                    if len(daily_flow) < len(f.DAILYFLOW):\n",
+    "                        daily_flow = f.DAILYFLOW\n",
     "            pbar.update(5)\n",
     "            isfinite = np.isfinite(f.DAILYFLOW)\n",
     "            daily_flow_inst_file = f.DAILYFLOW[isfinite]\n",
