--- a/Effective Discharge App.ipynb
+++ b/Effective Discharge App.ipynb
@@ -57,7 +57,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ee26f1b661d4e33a0244a44bd4a1065",
+       "model_id": "a4e1ff72463d44fd8e2be6408cb64518",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,7 +71,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61b5c15a498747c7b29cb652d3204a27",
+       "model_id": "2e061ac1aabc48eeb90f121686bd11a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,6 +81,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cekees/miniconda3/envs/river-mechanics/lib/python3.8/site-packages/numpy/lib/histograms.py:839: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "  keep = (tmp_a >= first_edge)\n",
+      "/home/cekees/miniconda3/envs/river-mechanics/lib/python3.8/site-packages/numpy/lib/histograms.py:840: RuntimeWarning: invalid value encountered in less_equal\n",
+      "  keep &= (tmp_a <= last_edge)\n"
+     ]
     }
    ],
    "source": [
@@ -240,9 +250,6 @@
     "                    daily_flow_plot.set_title('Daily Flow (from discrete file)')\n",
     "                    daily_flow_plot.grid()\n",
     "                    daily_flow = f.DAILYFLOW\n",
-    "                else:\n",
-    "                    if len(daily_flow) < len(f.DAILYFLOW):\n",
-    "                        daily_flow = f.DAILYFLOW\n",
     "            pbar.update(5)\n",
     "            isfinite = np.isfinite(f.DAILYFLOW)\n",
     "            daily_flow_inst_file = f.DAILYFLOW[isfinite]\n",
