updated calculation of daily_flow

--- a/Effective Discharge App.ipynb
+++ b/Effective Discharge App.ipynb
@@ -57,7 +57,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4e1ff72463d44fd8e2be6408cb64518",
+       "model_id": "98fdcccb7b844529acea0c0740c228c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,7 +71,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e061ac1aabc48eeb90f121686bd11a6",
+       "model_id": "8d7409ef6dc141a0822104bd8555e6b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,16 +81,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cekees/miniconda3/envs/river-mechanics/lib/python3.8/site-packages/numpy/lib/histograms.py:839: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  keep = (tmp_a >= first_edge)\n",
-      "/home/cekees/miniconda3/envs/river-mechanics/lib/python3.8/site-packages/numpy/lib/histograms.py:840: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  keep &= (tmp_a <= last_edge)\n"
-     ]
     }
    ],
    "source": [
@@ -226,7 +216,11 @@
     "                daily_flow_plot.set_xlabel('Date')\n",
     "                daily_flow_plot.set_title('Daily')\n",
     "                daily_flow_plot.grid()\n",
-    "                daily_flow = f.DAILY_FLOW\n",
+    "                daily_flow = []\n",
+    "                for flow in f.DAILY_FLOW:\n",
+    "                    if math.isfinite(flow):\n",
+    "                        daily_flow.append(flow)\n",
+    "                daily_flow = np.array(daily_flow)\n",
     "            else:\n",
     "                daily_flow = None\n",
     "        pbar.update(4)\n",
@@ -249,7 +243,11 @@
     "                    daily_flow_plot.set_xlabel('Date')\n",
     "                    daily_flow_plot.set_title('Daily Flow (from discrete file)')\n",
     "                    daily_flow_plot.grid()\n",
-    "                    daily_flow = f.DAILYFLOW\n",
+    "                    daily_flow = []\n",
+    "                    for flow in f.DAILYFLOW:\n",
+    "                        if math.isfinite(flow):\n",
+    "                            daily_flow.append(flow)\n",
+    "                    daily_flow = np.array(daily_flow)\n",
     "            pbar.update(5)\n",
     "            isfinite = np.isfinite(f.DAILYFLOW)\n",
     "            daily_flow_inst_file = f.DAILYFLOW[isfinite]\n",
@@ -300,7 +298,8 @@
     "                ssc_plot.grid()\n",
     "                ssc_plot.legend()\n",
     "                pbar.update(8)\n",
-    "                #daily_flow = flow_sand\n",
+    "                if daily_flow.shape[0] < flow_sand.shape[0]:\n",
+    "                    daily_flow = flow_sand\n",
     "                (n,bins,patches) = flow_hist.hist(daily_flow,bins=25)\n",
     "                flow_hist.set_ylabel('Incidence')\n",
     "                flow_hist.set_xlabel('Discharge [cfs]');\n",
